--- a/app/src/main/res/layout/fragment_analyse.xml
+++ b/app/src/main/res/layout/fragment_analyse.xml
@@ -262,6 +262,15 @@
                 />
 
             <com.amaze.fileutilities.home_page.ui.analyse.AnalysisTypeView
+                android:id="@+id/network_intensive_apps_preview"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:analysisTitle="@string/network_intensive_apps"
+                app:showPreview="true"
+                android:layout_marginTop="@dimen/material_generic"
+                />
+
+            <com.amaze.fileutilities.home_page.ui.analyse.AnalysisTypeView
                 android:id="@+id/newly_installed_apps_preview"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
