--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -54,5 +54,6 @@
     <color name="yellow_green_color_picker">#C5E17A</color>
     <color name="tool_bg">#151414</color>
     <color name="semi_black_transparent">#99000000</color>
-
+    <color name="grey_color">#a8a8a8</color>
+    <color name="gray_text">#B6B6B6</color>
 </resources>
