--- a/app/src/main/res/layout/fragment_analyse.xml
+++ b/app/src/main/res/layout/fragment_analyse.xml
@@ -47,6 +47,15 @@
                 app:showPreview="true"
                 android:layout_marginTop="@dimen/material_generic"
                 />
+            <com.amaze.fileutilities.home_page.ui.analyse.AnalysisTypeView
+                android:id="@+id/similar_images_preview"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:analysisTitle="@string/similar_images"
+                app:hint="@string/similar_images_hint"
+                app:showPreview="true"
+                android:layout_marginTop="@dimen/material_generic"
+                />
             <!--<com.amaze.fileutilities.home_page.ui.analyse.AnalysisTypeView
                 android:id="@+id/sad_preview"
                 android:layout_width="match_parent"
