--- a/app/src/main/res/layout/fragment_documents_list.xml
+++ b/app/src/main/res/layout/fragment_documents_list.xml
@@ -75,6 +75,16 @@
             android:visibility="gone"
             />
         <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/restoreTrashButtonFab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/ic_round_restore_from_trash_24"
+            app:backgroundTint="@color/highlight_yellow"
+            app:tint="@color/black"
+            android:layout_marginBottom="@dimen/material_generic"
+            android:visibility="gone"
+            />
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/optionsButtonFab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
