--- a/app/src/main/res/layout/please_wait_dialog.xml
+++ b/app/src/main/res/layout/please_wait_dialog.xml
@@ -10,6 +10,7 @@
         android:layout_height="wrap_content"
         android:textColor="@color/white"
         android:textSize="@dimen/twenty_four_sp"
+        android:text="@string/please_wait"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         />
@@ -18,9 +19,19 @@
         android:layout_width="wrap_content"
         android:layout_height="@dimen/zero_dp"
         android:indeterminate="true"
-        android:layout_marginLeft="@dimen/material_generic"
+        android:layout_marginStart="@dimen/material_generic"
         app:layout_constraintLeft_toRightOf="@+id/please_wait_text"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
+        />
+    <TextView
+        android:id="@+id/loadingProgressText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="@color/yellow_dark_2"
+        android:textSize="@dimen/sixteen_sp"
+        android:layout_marginTop="@dimen/material_generic"
+        app:layout_constraintTop_toBottomOf="@id/please_wait_text"
+        android:visibility="gone"
         />
 </androidx.constraintlayout.widget.ConstraintLayout>
