--- a/app/src/main/res/layout/adapter_donation.xml
+++ b/app/src/main/res/layout/adapter_donation.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
         android:id="@+id/adapter_donation_root"
@@ -10,6 +11,7 @@
         android:padding="@dimen/material_generic"
         android:background="?selectableItemBackground"
         android:orientation="horizontal"
+        app:layout_constraintTop_toTopOf="parent"
         >
         <LinearLayout
             android:id="@+id/test"
