--- a/app/src/main/res/layout/media_info_grid_layout.xml
+++ b/app/src/main/res/layout/media_info_grid_layout.xml
@@ -107,6 +107,17 @@
                     android:marqueeRepeatLimit="marquee_forever"
                     android:ellipsize="marquee"
                     />
+                <!-- placeholder -->
+                <TextView
+                    android:id="@+id/info_sub_summary"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/twelve_sp"
+                    android:layout_gravity="center_vertical"
+                    android:textColor="@color/gray_text"
+                    android:visibility="gone"
+                    />
+                <!-- placeholder ends -->
                 <TextView
                     android:id="@+id/extra_info"
                     android:layout_width="match_parent"
