--- a/app/src/main/res/layout/video_player_activity.xml
+++ b/app/src/main/res/layout/video_player_activity.xml
@@ -4,6 +4,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:keepScreenOn="true"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <RelativeLayout
