147: change video player and image viewer backgrounds to dark; fix popup bg; fix backpress on viewers

--- a/app/src/main/res/values-v27/themes.xml
+++ b/app/src/main/res/values-v27/themes.xml
@@ -4,5 +4,6 @@
         <item name="android:windowLayoutInDisplayCutoutMode">always</item>
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
+        <item name="android:windowBackground">@color/black</item>
     </style>
 </resources>
