--- a/app/src/main/res/drawable/button_curved_selected.xml
+++ b/app/src/main/res/drawable/button_curved_selected.xml
@@ -5,7 +5,7 @@
             <solid android:color="@color/white"/>
             <stroke android:width="0dp" android:color="#B1BCBE" />
             <corners android:radius="@dimen/material_generic"/>
-            <padding android:left="@dimen/eight_dp" android:top="0dp" android:right="@dimen/eight_dp" android:bottom="0dp" />
+<!--            <padding android:left="@dimen/eight_dp" android:top="0dp" android:right="@dimen/eight_dp" android:bottom="0dp" />-->
         </shape>
     </item>
     <item android:drawable="@drawable/ripple_curved_16" />
