Improvements in preloader for better performance

--- a/app/src/main/res/drawable/circle_shape.xml
+++ b/app/src/main/res/drawable/circle_shape.xml
@@ -3,6 +3,6 @@
     android:shape="oval">
 
     <size
-        android:width="1dp"
-        android:height="1dp"/>
+        android:width="@dimen/minimal_icon_size"
+        android:height="@dimen/minimal_icon_size"/>
 </shape>
